changes on 20 jan 12 50

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "start:all": "concurrently \"npm run dev\" \"npm run server:dev\""
   },
   "dependencies": {
+    "@google/genai": "^1.37.0",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.37.0",
-    "lucide-react": "^0.562.0"
+    "react-router-dom": "^6.30.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
